--- a/src/SourceEngine.Heatmap.Generator/Properties/launchSettings.json
+++ b/src/SourceEngine.Heatmap.Generator/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "SourceEngine.Heatmap.Generator": {
       "commandName": "Project",
-      "commandLineArgs": "-inputdatadirectory \"C:\\Users\\jimmy\\Desktop\\heatmapstuff\\parses\\\\\" -inputdatafilepathsfile \"C:\\Users\\jimmy\\Desktop\\heatmapstuff\\inputfilepaths.txt\" -heatmapjsondirectory \"C:\\Users\\jimmy\\Desktop\\heatmapstuff\\heatmapjson\\\\\" -outputheatmapdirectory \"C:\\Users\\jimmy\\Desktop\\heatmapstuff\\\\\" -heatmapstogenerate smokegrenadelocations"
+      "commandLineArgs": "-inputdatadirectory \"C:\\Users\\jimmy\\Desktop\\heatmapstuff\\parses\\\\\" -inputdatafilepathsfile \"C:\\Users\\jimmy\\Desktop\\heatmapstuff\\inputfilepaths.txt\" -heatmapjsondirectory \"C:\\Users\\jimmy\\Desktop\\heatmapstuff\\heatmapjson\\\\\" -outputheatmapdirectory \"C:\\Users\\jimmy\\Desktop\\heatmapstuff\\outputs\\\\\" -heatmapstogenerate all"
     }
   }
 }
