--- a/src/SourceEngine.Heatmap.Generator/SourceEngine.Heatmap.Generator.csproj
+++ b/src/SourceEngine.Heatmap.Generator/SourceEngine.Heatmap.Generator.csproj
@@ -5,6 +5,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <Optimize>false</Optimize>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="SourceEngine.Demo.Stats" Version="2.3.0" />
